# cpphelloworld

./: .gitignore  CMakeCache.txt  cmake_install.cmake
CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelease
_build/: helloworld  stack
cpphelloworld/: CMakeLists.txt  Comparable.h  DataStructures.cpp  DataStructures.hpp  Maybe.cpp  Show.cpp  Show.h  classHeader.cpp  classHeader.hpp  functional.cpp  log.cpp  log.hpp  main.cpp  main_stack.cpp  pch.h  templateClass.hpp
cpphelloworld.xcodeproj/: project.pbxproj
cpphelloworld.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cpphelloworld.xcodeproj/project.xcworkspace/xcuserdata/min.xcuserdatad/xcdebugger/: Expressions.xcexplist
cpphelloworld.xcodeproj/xcshareddata/xcschemes/: cpphelloworld.xcscheme  helloworld.xcscheme
cpphelloworld.xcodeproj/xcuserdata/min.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
cpphelloworld.xcodeproj/xcuserdata/min.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: CMakeLists.txt  Empty.cpp  Maybe.hpp  Show.cpp  Show.h  Stack.h  classHeader.cpp  classHeader.hpp  log.cpp  log.hpp  main.cpp  pch.cpp  pch.h
src/notes/: CodeNotes.cpp
